[B]Version v1.0.0[/B]

- Your Tamil DESI Portal

[B]Version v1.0.1[/B]

- Fixed server address

[B]Version v1.0.2[/B]

- Server address changed again, Fixed server address

[B]Version v1.0.3[/B]

- Server address changed again, Youtube gdata format changed

[B]Version v1.0.4[/B]

- Server address changed again

[B]Version v1.0.5[/B]

- Scraped server address from HTTP response instead of hard coding it.

[B]Version v1.0.6[/B]

- Fix Youtube and Dailymotion breakage.

[B]Version v1.0.7[/B]

- Hosting site was moved to a different server and broker the scrapper. Fixed it by parsing the Location header in response.

[B]Version v1.0.8[/B]

- Use urlresolver and t0mm modules to resolve URL for hosted media.

[B]Version v1.0.9[/B]

- Add support for comedy clips

[B]Version v2.0.0[/B]

- Switched source for content
- More menu options to choose content from
- Switched comedy content to tubetamil
- Improved handling of youtube/dailymotion videos
- Saved an extra menu click when content is hosted in only one server

[B]Version v2.0.1[/B]

- Cache menu options to improve speed
- Throw an error message to user when youtube playlist does not exist
