@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.oliyumoliyum" name="Oliyum Oliyum" version="2.0.1" provider-name="codenx">
+<addon id="plugin.video.oliyumoliyum" name="Oliyum Oliyum" version="2.0.2" provider-name="codenx">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
+	 <import addon="script.module.simplejson" version="2.0.10" />
     <import addon="script.module.beautifulsoup" version="3.2.0"/>
     <import addon="script.module.urlresolver" version="2.0.9"/>
+    <import addon="plugin.video.dailymotion_com" version="2.1.1"/>
     <import addon="script.module.t0mm0.common" version="2.1.1"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
